<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Productsnap</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_asktitle">Titre</string>
    <string name="dialog_ok">Confirmer</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="toast_networkErr">Problème reseau</string>
    <string name="toast_invalidInput">Veuillez renseigner tout les champs</string>
    <string name="toast_processErr">erreur</string>
    <string name="deal_preview">Aperçus</string>
    <string name="deal_quantity">Quantité</string>
    <string name="deal_duration">Durée</string>
    <string name="deal_price">Prix</string>
    <string name="deal_buttonSend">Envoyer</string>
    <string name="title_activity_cam">CamActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
