<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageTest"
        android:scaleType = "centerCrop"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/deal_preview" />

    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="25dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <Space
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/deal_quantity"
            android:background="@color/white_opaque"
            android:inputType="number"
            android:hint="@string/deal_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:textSize="30sp" />


        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/deal_duration"
            android:background="@color/white_opaque"
            android:inputType="number"
            android:hint="@string/deal_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:textSize="30sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/deal_price"
            android:background="@color/white_opaque"
            android:inputType="number"
            android:hint="@string/deal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:textSize="30sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/deal_buttonSend"
            android:onClick="clickSendDeal"/>
    </LinearLayout>

</RelativeLayout>
